--- a/index.html
+++ b/index.html
@@ -5,11 +5,204 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <!-- aesome icion script -->
+    <script src="https://kit.fontawesome.com/dc6851b6de.js" crossorigin="anonymous"></script>
     <title>world cup-blog</title>
 </head>
 
 <body>
+    <header>
 
+    </header>
+    <main>
+        <!-- Blog wacth live section -->
+        <section>
+            <article class="container">
+                <div class="blog-info">
+                    <div>
+                        <h1 class="container-title">The Greatest show on the earth</h1>
+
+                        <p>This player play brazil.This brazil player are very popular player.The brazil win the 5 world
+                            cup
+                            and this plyer is a very popular.so this is a brazil player of the best player and brazil is
+                            the
+                            best football table</p>
+
+                        <div class="btns">
+                            <button class="btn">Watch Live <i class="fa-solid fa-angle-right"></i></button>
+                        </div>
+                    </div>
+                    <div class="banner-img">
+                        <img src="./assets/Banner Image.png" alt="">
+                    </div>
+                </div>
+            </article>
+        </section>
+        <!-- blog secetion -->
+        <section>
+            <div class="main-container">
+                <div class="menu-blog">
+                    <div class="menu-bar">
+                        <div class="menu">Upcomming Match</div>
+                        <div class="menu">All Group</div>
+                        <div class="menu" id="blog-menu">Blog</div>
+                    </div>
+                    <!-- menu section end -->
+
+                    <div class="players">
+                        <!-- frist players -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <i class="fa-regular fa-clock"></i>10hr
+                                <i class="fa-regular fa-comment-dots"></i>23
+                            </div>
+                        </div>
+
+                        <!-- second player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <i class="fa-regular fa-clock"></i>10hr
+                                <i class="fa-regular fa-comment-dots"></i>23
+                            </div>
+                        </div>
+                        <!-- third player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <i class="fa-regular fa-clock"></i>10hr
+                                <i class="fa-regular fa-comment-dots"></i>23
+                            </div>
+                        </div>
+                        <!-- fourth player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <div>
+                                    <i class="fa-regular fa-clock"></i>10hr
+                                    <i class="fa-regular fa-comment-dots"></i>23
+                                </div>
+                            </div>
+                        </div>
+                        <!-- fifth player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <div>
+                                    <i class="fa-regular fa-clock"></i>10hr
+                                    <i class="fa-regular fa-comment-dots"></i>23
+                                </div>
+                            </div>
+                        </div>
+                        <!-- sixth player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <div>
+                                    <i class="fa-regular fa-clock"></i>10hr
+                                    <i class="fa-regular fa-comment-dots"></i>23
+                                </div>
+                            </div>
+                        </div>
+                        <!-- seventh player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <div>
+                                    <i class="fa-regular fa-clock"></i>10hr
+                                    <i class="fa-regular fa-comment-dots"></i>23
+                                </div>
+                            </div>
+                        </div>
+                        <!-- eighth player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <i class="fa-regular fa-clock"></i>10hr
+                                <i class="fa-regular fa-comment-dots"></i>23
+                            </div>
+                        </div>
+                        <!-- nineth player -->
+                        <div class="player">
+                            <img src="./assets/Blog Image.png" alt="">
+
+                            <h5 class="blog-title">Transfer</h5>
+
+                            <p class="blog-write">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+
+                            <div>
+                                <div>
+                                    <i class="fa-regular fa-clock"></i>10hr
+                                    <i class="fa-regular fa-comment-dots"></i>23
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer-info">
+            <div>
+                <h3 class="footer-title" style="padding:80px;">Goal</h3>
+            </div>
+            <hr class="under-line ">
+            <div class="about-info">
+                <div>Contact Us</div>
+                <div>Terms of Service</div>
+                <div>Privacy Policy Privacy</div>
+                <div>Privacy Settings</div>
+                <div>Goal App</div>
+                <div>Goal Live</div>
+            </div>
+            <div class="icon-container">
+                <div><i class="fa-brands fa-instagram"></i></div>
+                <div><i class="fa-brands fa-linkedin"></i></div>
+                <div><i class="fa-brands fa-facebook-square"></i></div>
+            </div>
+        </footer>
+    </main>
 </body>
 
 </html>
