--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- aesome icion script -->
+    <!-- aesome icon script -->
     <script src="https://kit.fontawesome.com/dc6851b6de.js" crossorigin="anonymous"></script>
     <title>world cup-blog</title>
 </head>
@@ -46,7 +46,7 @@
                     <div class="menu-bar">
                         <div class="menu">Upcomming Match</div>
                         <div class="menu">All Group</div>
-                        <div class="menu" id="blog-menu">Blog</div>
+                        <div class="menu blog-menu">Blog</div>
                     </div>
                     <!-- menu section end -->
 
